--- a/site_pages/A-fast4/ocr_fast_set25.html
+++ b/site_pages/A-fast4/ocr_fast_set25.html
@@ -1,56 +1,33 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Four Starter</title>
-    <link rel="stylesheet" href="../../styles.css" />
-
+  <link rel="stylesheet" href="../../styles.css" />
 </head>
 <body>
-
-
-   <header><h1>FAST FOUR STARTER</h1></header>
+  <header><h1>FAST FOUR STARTER</h1></header>
   <main class="index-grid">
-  <div class="grid">
+    <div class="grid">
     <div class="card yellow">
-      <h3>1. Identify</h3>
+      <h3>1. Describe</h3>
       <div class="marks">[1]</div>
-      <p>One disadvantage of logic gates.</p>
+      <p>One disadvantage of version control systems.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Physical circuits take up chip space and power.</div>
+      <div class="answer"><strong>Answer:</strong> • Adds tools and workflows that developers must learn, increasing initial complexity<br>• Poorly managed branching and merging can create conflicts and slow development<br>• Storing many versions and branches consumes storage and may require server infrastructure<br>• Can give a false sense of security if teams rely on version history instead of proper testing and review</div>
     </div>
 
     <div class="card pink">
-      <h3>2. Explain</h3>
-      <div class="marks">[3]</div>
-      <p>One benefit of automation in software testing.</p>
-      <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Reduces human error and increases consistency.</div>
-    </div>
-
-    <div class="card green">
-      <h3>3. State</h3>
+      <h3>2. State</h3>
       <div class="marks">[1]</div>
-      <p>One benefit of using cache memory.</p>
+      <p>One benefit of defensive design.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Reduces access time for frequently used data.</div>
+      <div class="answer"><strong>Answer:</strong> • Anticipates incorrect or malicious input and handles it safely<br>• Includes validation, authentication and clear error messages to protect the system<br>• Reduces the likelihood of crashes and security vulnerabilities<br>• Improves reliability and robustness of software in real‑world use</div>
     </div>
-
-    <div class="card blue">
-      <h3>4. Identify</h3>
-      <div class="marks">[1]</div>
-      <p>One drawback of modular software.</p>
-      <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Extra time needed to design and integrate modules.</div>
     </div>
-  </div>
-
-  
   </main>
   <button id="showBtn" disabled>Show Answers</button>
-
   <script>
     const inputs = document.querySelectorAll('.input');
     const button = document.getElementById('showBtn');
@@ -70,6 +47,5 @@
       button.classList.remove('enabled');
     });
   </script>
-
 </body>
 </html>
