--- a/site_pages/A-fast4/ocr_fast_set1.html
+++ b/site_pages/A-fast4/ocr_fast_set1.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Four Starter</title>
-    <link rel="stylesheet" href="../../styles.css" />
-
+  <link rel="stylesheet" href="../../styles.css" />
 </head>
 <body>
-
-
-   <header><h1>FAST FOUR STARTER</h1></header>
+  <header><h1>FAST FOUR STARTER</h1></header>
   <main class="index-grid">
-  <div class="grid">
+    <div class="grid">
     <div class="card yellow">
-      <h3>1. Identify</h3>
+      <h3>1. State</h3>
       <div class="marks">[1]</div>
-      <p>One disadvantage of logic gates.</p>
+      <p>One difference between RISC and CISC.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Physical circuits take up chip space and power.</div>
+      <div class="answer"><strong>Answer:</strong> • RISC uses a small set of simple instructions, each designed to execute in one clock cycle<br>• CISC uses a large set of more complex instructions that may take multiple cycles<br>• RISC architectures rely heavily on registers and simple addressing modes<br>• CISC architectures include instructions that can perform multi‑step operations or complex memory access patterns</div>
     </div>
 
     <div class="card pink">
-      <h3>2. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>One disadvantage of open-source software.</p>
+      <h3>2. Identify</h3>
+      <div class="marks">[1]</div>
+      <p>One drawback of abstraction.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> May lack official support or regular updates.</div>
+      <div class="answer"><strong>Answer:</strong> • Important implementation details can be hidden from developers who need to understand performance or behaviour<br>• Too many layers of abstraction can make it harder to trace how a system actually works<br>• Poor abstractions can be inflexible and hard to modify without affecting dependent code<br>• Abstraction may introduce extra processing steps, reducing efficiency slightly</div>
     </div>
 
     <div class="card green">
-      <h3>3. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>What a stack is used for.</p>
+      <h3>3. State</h3>
+      <div class="marks">[1]</div>
+      <p>One benefit of recursion.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Stores return addresses and temporary data (LIFO).</div>
+      <div class="answer"><strong>Answer:</strong> • Allows certain algorithms, such as tree traversal or divide‑and‑conquer sorts, to be expressed concisely and clearly<br>• Can mirror the natural recursive structure of a problem, making the solution easier to reason about<br>• Reduces the need for complex loop and stack management in the source code<br>• Makes some mathematical definitions (e.g. factorial, Fibonacci) straightforward to implement</div>
     </div>
 
     <div class="card blue">
-      <h3>4. State</h3>
+      <h3>4. Explain</h3>
       <div class="marks">[1]</div>
-      <p>The purpose of a compiler (extended)</p>
+      <p>How paging and segmentation differ</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Converts source code into machine code.</div>
+      <div class="answer"><strong>Answer:</strong> • Paging divides memory into fixed‑size blocks (pages), whereas segmentation uses variable‑size blocks (segments)<br>• Pages are based on physical memory management; segments reflect logical program structures such as functions or data areas<br>• Paging typically avoids external fragmentation but may have internal fragmentation<br>• Segmentation can suffer from external fragmentation as segments vary in size<br>• Segmentation makes it easier to apply different protection or access rights to different logical units</div>
     </div>
-  </div>
-
-  
+    </div>
   </main>
   <button id="showBtn" disabled>Show Answers</button>
-
   <script>
     const inputs = document.querySelectorAll('.input');
     const button = document.getElementById('showBtn');
@@ -70,6 +63,5 @@
       button.classList.remove('enabled');
     });
   </script>
-
 </body>
 </html>
