--- a/site_pages/A-fast4/ocr_fast_set20.html
+++ b/site_pages/A-fast4/ocr_fast_set20.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Four Starter</title>
-    <link rel="stylesheet" href="../../styles.css" />
-
+  <link rel="stylesheet" href="../../styles.css" />
 </head>
 <body>
-
-
-   <header><h1>FAST FOUR STARTER</h1></header>
+  <header><h1>FAST FOUR STARTER</h1></header>
   <main class="index-grid">
-  <div class="grid">
+    <div class="grid">
     <div class="card yellow">
-      <h3>1. Explain</h3>
-      <div class="marks">[3]</div>
-      <p>How paging and segmentation differ (extended)</p>
+      <h3>1. Identify</h3>
+      <div class="marks">[1]</div>
+      <p>One drawback of modular software.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Paging uses fixed blocks; segmentation uses logical sections.</div>
+      <div class="answer"><strong>Answer:</strong> • Designing and agreeing clear interfaces between modules requires extra time and planning<br>• Too many small modules can increase the complexity of the overall system structure<br>• Changes to shared interfaces may require coordinated updates across multiple modules<br>• Communication between modules (function calls, messages) introduces a small performance overhead</div>
     </div>
 
     <div class="card pink">
-      <h3>2. Identify</h3>
+      <h3>2. Describe</h3>
       <div class="marks">[1]</div>
-      <p>One reason why recursion uses more memory.</p>
+      <p>How bubble sort works</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Each call adds to the call stack until complete.</div>
+      <div class="answer"><strong>Answer:</strong> • Repeatedly passes through the list, comparing adjacent elements<br>• Swaps neighbouring elements if they are in the wrong order<br>• After each full pass, the largest unsorted element has ‘bubbled’ to its correct position at the end of the list<br>• Continues making passes until a pass occurs with no swaps, meaning the list is sorted<br>• Has a worst‑case time complexity of O(n²) and is simple but inefficient for large lists</div>
     </div>
 
     <div class="card green">
-      <h3>3. State</h3>
+      <h3>3. Describe</h3>
       <div class="marks">[1]</div>
-      <p>One drawback of modular programming.</p>
+      <p>What a stack is used for.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Can require more memory due to function calls.</div>
+      <div class="answer"><strong>Answer:</strong> • Stores return addresses when subroutines and functions are called<br>• Holds local variables and parameters for active procedures<br>• Keeps track of nested and recursive function calls via stack frames<br>• Provides a last‑in, first‑out (LIFO) structure for temporary data storage<br>• Supports evaluation of arithmetic expressions and undo operations</div>
     </div>
 
     <div class="card blue">
       <h3>4. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>One drawback of using abstraction in design.</p>
+      <div class="marks">[1]</div>
+      <p>One benefit of Big O notation.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Important implementation details may be overlooked.</div>
+      <div class="answer"><strong>Answer:</strong> • Provides a way to describe how an algorithm’s running time or memory usage grows with input size<br>• Allows comparisons between algorithms independently of hardware or implementation details<br>• Helps programmers choose more efficient algorithms for large inputs<br>• Highlights whether an algorithm will scale well as data sizes increase</div>
     </div>
-  </div>
-
-  
+    </div>
   </main>
   <button id="showBtn" disabled>Show Answers</button>
-
   <script>
     const inputs = document.querySelectorAll('.input');
     const button = document.getElementById('showBtn');
@@ -70,6 +63,5 @@
       button.classList.remove('enabled');
     });
   </script>
-
 </body>
 </html>
