--- a/site_pages/A-fast4/ocr_fast_set5.html
+++ b/site_pages/A-fast4/ocr_fast_set5.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Four Starter</title>
-    <link rel="stylesheet" href="../../styles.css" />
-
+  <link rel="stylesheet" href="../../styles.css" />
 </head>
 <body>
-
-
-   <header><h1>FAST FOUR STARTER</h1></header>
+  <header><h1>FAST FOUR STARTER</h1></header>
   <main class="index-grid">
-  <div class="grid">
+    <div class="grid">
     <div class="card yellow">
       <h3>1. Explain</h3>
-      <div class="marks">[3]</div>
-      <p>One ethical drawback of AI systems.</p>
+      <div class="marks">[1]</div>
+      <p>One drawback of using SSDs.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> AI can reflect human bias or make unfair decisions.</div>
+      <div class="answer"><strong>Answer:</strong> • More expensive per gigabyte than traditional hard disk drives<br>• Flash memory cells have a limited number of write cycles, leading to wear over time<br>• Data recovery from failed SSDs can be difficult or impossible<br>• Performance can degrade as the drive becomes full if not managed carefully</div>
     </div>
 
     <div class="card pink">
-      <h3>2. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>What a stack is used for (extended)</p>
+      <h3>2. Explain</h3>
+      <div class="marks">[1]</div>
+      <p>The difference between a compiler and an interpreter</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Stores return addresses and temporary data (LIFO).</div>
+      <div class="answer"><strong>Answer:</strong> • A compiler translates the entire source code into machine code before execution, producing an executable file<br>• An interpreter translates and executes the program line by line at run time without producing a separate executable<br>• Compiled programs generally run faster because translation happens once<br>• Interpreted programs are easier to test and debug because errors are reported as soon as a problematic line is reached</div>
     </div>
 
     <div class="card green">
-      <h3>3. Explain</h3>
-      <div class="marks">[3]</div>
-      <p>How interrupts improve CPU performance.</p>
+      <h3>3. Describe</h3>
+      <div class="marks">[1]</div>
+      <p>One benefit of using floating-point representation.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> They let the CPU handle urgent events without constant polling.</div>
+      <div class="answer"><strong>Answer:</strong> • Can represent a very wide range of real numbers, including very large and very small values<br>• Supports fractional values for scientific and engineering calculations<br>• Uses a mantissa and exponent to provide approximate values with controlled precision<br>• More suitable than fixed‑point or integer representation for many numerical algorithms</div>
     </div>
 
     <div class="card blue">
-      <h3>4. Identify</h3>
+      <h3>4. State</h3>
       <div class="marks">[1]</div>
-      <p>One disadvantage of logic gates.</p>
+      <p>One disadvantage of real-time operating systems.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Physical circuits take up chip space and power.</div>
+      <div class="answer"><strong>Answer:</strong> • Often require specialised hardware and careful system tuning, increasing cost<br>• Feature sets may be limited to maintain strict timing guarantees<br>• Development and testing must be rigorous to prove deadlines are always met<br>• Missing a deadline can have serious safety or financial consequences</div>
     </div>
-  </div>
-
-  
+    </div>
   </main>
   <button id="showBtn" disabled>Show Answers</button>
-
   <script>
     const inputs = document.querySelectorAll('.input');
     const button = document.getElementById('showBtn');
@@ -70,6 +63,5 @@
       button.classList.remove('enabled');
     });
   </script>
-
 </body>
 </html>
