--- a/site_pages/A-fast4/ocr_fast_set7.html
+++ b/site_pages/A-fast4/ocr_fast_set7.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Four Starter</title>
-    <link rel="stylesheet" href="../../styles.css" />
-
+  <link rel="stylesheet" href="../../styles.css" />
 </head>
 <body>
-
-
-   <header><h1>FAST FOUR STARTER</h1></header>
+  <header><h1>FAST FOUR STARTER</h1></header>
   <main class="index-grid">
-  <div class="grid">
+    <div class="grid">
     <div class="card yellow">
-      <h3>1. Identify</h3>
+      <h3>1. Explain</h3>
       <div class="marks">[1]</div>
-      <p>One drawback of binary search.</p>
+      <p>How merge sort works</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Requires sorted data to work properly.</div>
+      <div class="answer"><strong>Answer:</strong> • Uses a divide‑and‑conquer strategy to sort a list<br>• Recursively splits the list into smaller sublists until each sublist contains a single element<br>• Merges pairs of sorted sublists into larger sorted lists by repeatedly selecting the smallest head element<br>• Continues merging until one fully sorted list remains<br>• Has predictable time complexity of O(n log n) and is a stable sort</div>
     </div>
 
     <div class="card pink">
       <h3>2. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>One drawback of using abstraction in design.</p>
+      <div class="marks">[1]</div>
+      <p>One disadvantage of real-time systems.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Important implementation details may be overlooked.</div>
+      <div class="answer"><strong>Answer:</strong> • Need rigorous testing and verification to ensure timing constraints are always met<br>• Typically cost more to design, implement and maintain than non‑real‑time systems<br>• Hardware and software choices are constrained by the need for predictability<br>• Failure to respond in time can cause physical damage, safety hazards or financial loss</div>
     </div>
 
     <div class="card green">
       <h3>3. Describe</h3>
-      <div class="marks">[2]</div>
-      <p>One disadvantage of version control systems.</p>
+      <div class="marks">[1]</div>
+      <p>One drawback of binary representation.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Can be confusing for beginners and require setup.</div>
+      <div class="answer"><strong>Answer:</strong> • Large binary numbers are difficult for humans to read and interpret directly<br>• Requires conversion to decimal or hexadecimal for easier understanding<br>• Representing some fractional values exactly is not possible with a fixed number of bits<br>• Bit‑level errors can drastically change the represented value</div>
     </div>
 
     <div class="card blue">
-      <h3>4. State</h3>
+      <h3>4. Explain</h3>
       <div class="marks">[1]</div>
-      <p>One use of ROM (extended)</p>
+      <p>How paging and segmentation differ.</p>
       <textarea class="input"></textarea>
-      <div class="answer"><strong>Answer:</strong> Stores firmware or start-up instructions.</div>
+      <div class="answer"><strong>Answer:</strong> • Paging divides memory into fixed‑size blocks (pages), whereas segmentation uses variable‑size blocks (segments)<br>• Pages are based on physical memory management; segments reflect logical program structures such as functions or data areas<br>• Paging typically avoids external fragmentation but may have internal fragmentation<br>• Segmentation can suffer from external fragmentation as segments vary in size<br>• Segmentation makes it easier to apply different protection or access rights to different logical units</div>
     </div>
-  </div>
-
-  
+    </div>
   </main>
   <button id="showBtn" disabled>Show Answers</button>
-
   <script>
     const inputs = document.querySelectorAll('.input');
     const button = document.getElementById('showBtn');
@@ -70,6 +63,5 @@
       button.classList.remove('enabled');
     });
   </script>
-
 </body>
 </html>
